--- a/nginx.conf
+++ b/nginx.conf
@@ -32,28 +32,7 @@
 			'$status $body_bytes_sent "$http_referer" '
 			'"$http_user_agent" $http_x_forwarded_for';
 			access_log  /usr/local/nginx/logs/localhost.log access;#设定访问日志的存放路径
-			#  fastcgi_connect_timeout 300;
-			#  fastcgi_send_timeout 300;
-			#  fastcgi_read_timeout 300;
-			#  fastcgi_buffer_size 64k;
-			#  fastcgi_buffers 4 64k;
-			#  fastcgi_busy_buffers_size 128k;
-			#  fastcgi_temp_file_write_size 128k;
-			#  gzip on;
-			#  gzip_min_length  1k;
-			#  gzip_buffers     4 16k;
-			#  gzip_http_version 1.0;
-			#  gzip_comp_level 2;
-			#  gzip_types       text/plain application/x-javascript text/css application/xml;
-			#  gzip_vary on;
-			#limit_zone  crawler  $binary_remote_addr  10m;
-			###禁止通过ip访问站点
-			#server {
-			#	listen 8000 default;
-			#	server_name _;
-			#	server_name soolr.com www.soolr.com;
-			#	return 500;
-			#}
+			
 			server {
 		        ### server port and name ###
 		        listen          443 ssl;
@@ -70,40 +49,25 @@
 		        ssl_certificate_key  /var/www/soolr.com/www.soolr.com.key;
 		        ### Add SSL specific settings here ###
 		        keepalive_timeout    60;
-		 
-		        ###  Limiting Ciphers ########################
-		        # Uncomment as per your setup
-		        #ssl_ciphers HIGH:!ADH;
-		        #ssl_perfer_server_ciphers on;
-		        #ssl_protocols SSLv3;
-		        ##############################################
-		        ### We want full access to SSL via backend ###
 		        location / {
 		                index index.html index.htm;
-										proxy_pass http://localhost:8080;#转向tomcat处理
-										root /var/www/soolr.com/soolr;
-										expires      30d;
-						}		
+						proxy_pass http://localhost:8080;#转向tomcat处理
+						root /var/www/soolr.com;
+						expires      30d;
+				}	
+				location /solr {
+		                index index.html index.htm;
+						proxy_pass http://localhost:8080;#转向tomcat处理
+						root /var/www/soolr.com/solr;
+						expires      30d;
+				}			
 							
 		    }
 			server{
 				listen       80;
 				server_name  soolr.com www.soolr.com;
-				#rewrite ^   https://$host$server_name$request_uri? permanent;
-				return 301 https://www.soolr.com;
-
-				#index index.html index.htm;#设定访问的默认首页地址
-				#root /var/www/soolr.com/soolr;#设定网站的资源存放路径
-				##limit_conn   crawler  20;   
-				#location / {
-				#	index index.html index.htm;
-				#	proxy_pass http://localhost:8080;#转向tomcat处理
-				#	root /var/www/soolr.com/soolr;
-				#	expires      30d;
-				#}
-				#	location ~ .*\.(js|css)?$
-				#{
-				#	expires      1h;
-				#}  
+				if ($scheme = http) { 
+					return 301 https://$server_name$request_uri; 
+				}
 			} 
 		}
