--- a/nginx.conf
+++ b/nginx.conf
@@ -60,7 +60,12 @@
 						proxy_pass http://localhost:8080;#转向tomcat处理
 						root /var/www/soolr.com/solr;
 						expires      30d;
-				}			
+				}
+				location /nexus {
+		                index index.html index.htm;
+						proxy_pass http://localhost:8081;#转向nexus处理
+						expires      30d;
+				}				
 							
 		    }
 			server{
