--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@
 			
 			server {
 		        ### server port and name ###
-		        listen          443 ssl;
+		        listen 443 ssl;
 		        server_name    soolr.com www.soolr.com;
 		        
 		        ssl on;
@@ -64,13 +64,18 @@
 				location /nexus {
 		                index index.html index.htm;
 						proxy_pass http://localhost:8081;#转向nexus处理
+						proxy_set_header Host $host;
+						proxy_set_header X-Real-IP $remote_addr;
+						proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+						proxy_set_header X-Forwarded-Proto "https";
 						expires      30d;
 				}				
 							
 		    }
 			server{
-				listen       80;
+				listen 80;
 				server_name  soolr.com www.soolr.com;
+				port_in_redirect off;
 				if ($scheme = http) { 
 					return 301 https://$server_name$request_uri; 
 				}
