--- a/nginx.conf
+++ b/nginx.conf
@@ -61,9 +61,15 @@
 						root /var/www/soolr.com/solr;
 						expires      30d;
 				}
+				location /cas {
+		                index index.html index.htm;
+						proxy_pass http://localhost:8088;#转向tomcat处理
+						root /var/www/soolr.com/cas;
+						expires      30d;
+				}
 				location /nexus {
 		                index index.html index.htm;
-						proxy_pass http://localhost:8081;#转向nexus处理
+						proxy_pass http://localhost:8080;#转向nexus处理
 						proxy_set_header Host $host;
 						proxy_set_header X-Real-IP $remote_addr;
 						proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
