--- a/nginx.conf
+++ b/nginx.conf
@@ -63,7 +63,7 @@
 				}
 				location /cas {
 		                index index.html index.htm;
-						proxy_pass http://localhost:8088;#转向tomcat处理
+						proxy_pass https://localhost:8443;#转向tomcat处理
 						root /var/www/soolr.com/cas;
 						expires      30d;
 				}
